--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.5",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
