--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,9 @@
     "react-image-gallery": "^1.2.11",
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "react-select": "^5.7.0",
+    "socket.io-client": "^4.6.1",
     "use-reducer-logger": "^1.0.2",
     "web-vitals": "^2.1.2"
   },
