--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,19 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^4.2.1",
     "firebase": "^9.15.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.2",
     "react-image-gallery": "^1.2.11",
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
+    "recharts": "^2.4.3",
     "socket.io-client": "^4.6.1",
     "use-reducer-logger": "^1.0.2",
     "web-vitals": "^2.1.2"
